--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-google-maps/api": "^2.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-floating-whatsapp": "^5.0.8",
+    "react-router-dom": "^6.14.2",
+    "react-whatsapp": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.4",
